@@ -1,6 +1,7 @@
 # 0.032
 # Dashboard displays session count
 # Dashboard displays subsession count 
+# UI/UX changes, add subsession introduced
 
 # 0.031
 # [View User] Download files works
